01-auth-service.yaml
# Auth Service Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      # Pod-level security context
      securityContext:
        runAsNonRoot: true      # Prevent running as root
        runAsUser: 1000         # Non-root UID
        runAsGroup: 3000        # Primary GID
        fsGroup: 2000            # Filesystem group for mounted volumes
        seccompProfile:         #systecall to kernel allowed to default
          type: RuntimeDefault

      containers:
      - name: auth-service
        image: daasnigeria/daasrepo:auth-service
        imagePullPolicy: IfNotPresent

        # Container-level security context
        securityContext:
          allowPrivilegeEscalation: false      # Prevent privilege escalation
          readOnlyRootFilesystem: true         #Make root filesystem read-only
          capabilities:
            drop:                              #Drop all capabilities
              - ALL

        ports:
          - containerPort: 8082

        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
          requests:
            memory: "64Mi"
            cpu: "50m"

        livenessProbe:
          tcpSocket:
            port: 8082
          initialDelaySeconds: 30
          periodSeconds: 10

        readinessProbe:
          tcpSocket:
            port: 8082
          initialDelaySeconds: 5
          periodSeconds: 5
---
# Auth Service Service
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
